cmake_minimum_required(VERSION 3.26.4)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
project(PingPong)
find_package(raylib REQUIRED)
include_directories(${raylib_INCLUDE_DIRS})
file(GLOB SOURCES src/headers/*.h src/*.cc)
add_executable(PingPong ${SOURCES})
target_link_libraries(PingPong ${raylib_LIBRARIES})
